...
                                    </mask>
                                </variation>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="asX-lq-O1O">
                                <rect key="frame" x="159" y="258" width="300" height="140"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PARTNER B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQs-rO-imt">
                                        <rect key="frame" x="100" y="8" width="100" height="25"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="H4l-Id-CXL"/>
                                            <constraint firstAttribute="height" constant="25" id="m6D-Gu-2yR"/>
                                            <constraint firstAttribute="width" constant="100" id="oXz-LW-SDi"/>
                                            <constraint firstAttribute="width" constant="100" id="szZ-8o-woQ"/>
...
                                        <color key="tintColor" red="0.52820742060000003" green="0.2141916395" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                    </barButtonItem>
                                    <barButtonItem title="B:" style="plain" id="f7Z-CP-fYg">
                                        <color key="tintColor" red="0.52820742060000003" green="0.2141916395" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="iBm-PQ-ExZ"/>
                                    <barButtonItem title="Charts" id="sva-lp-2g9">
                                        <color key="tintColor" red="0.52820742060000003" green="0.2141916395" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <segue destination="DBg-yn-o2j" kind="show" identifier="chartDataSegue" id="OJe-Gs-IDX"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
...
                                    <constraint firstAttribute="height" constant="28" id="MvE-mV-5bA"/>
                                    <constraint firstAttribute="width" constant="300" id="kdJ-Cd-05B"/>
                                    <constraint firstAttribute="width" constant="300" id="lmo-76-SQY"/>
                                </constraints>
                                <segments>
                                    <segment title="3 Months"/>
                                    <segment title="6 Months"/>
                                    <segment title="1 Year"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="BJb-fO-bKz"/>
                                        <exclude reference="GqR-gx-3Pw"/>
...
